--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,9 @@
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
-	<div id="app">		
+	<div class="main-content">
+		<div id="app">		
+		</div>
 	</div>
 	<script type="text/javascript" src="bundle.js"></script>
 </body>
