updated routes, updated folder structure for routes, updated server and how client populates data and default beer, updated schema

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<base href="/" />
 	<title>BeerNerdz</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
